fixed issue where the gradient would not extend all the way to the bottom on mobile devices, including the Nest Hub / Max

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -11,11 +11,12 @@ body::after {
 
 html {
   height: 100%;
-  width: 100%;
+  // width: 100%;
   font-size: 10px;
 }
 
 body {
+  height: 100%;
   margin: 0% 20%;
   @media screen and (max-width: 768px) {
     margin: 0% 5%;
@@ -24,6 +25,8 @@ body {
     hsl(61, 48%, 59%),
     hsl(61, 38%, 79%)
   );
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   }
   @media screen and (min-width: 769px) { 
     background: linear-gradient(
@@ -31,8 +34,10 @@ body {
     hsl(61, 48%, 59%),
     hsl(61, 38%, 79%)
   );
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   }
-    
+ 
   }
 
 
